Add new complexity metric